changelog.txt - What has been done to WinDirStat (newest top)
Last modified: $Date$
=============================================================

2004-11-25	assarbad
	* Removal of obsolete functions IsCompressed() and
	  IsEncrypted().
	* Optimised use of GetCompressedFileSize() API which is
	  now cached in the application object similar to PSAPI.
	* Removed manifest and respective file for Russian and
	  the manifest file for German ressources.
	* Fixed coloring bug upon error codes #2 and #123 which
	  happens using the ANSI version on files with Unicode
	  names which cannot be mapped to ANSI names.
	* Implemented the column to show file attributes.

2004-11-24	bseifert
	* Eliminated hidden option "ExplorerStyle". The directory
	  list context menu now appears horizontally at the cursor 
	  position and vertically under (or above) the label.
	  
2004-11-23	bseifert
	* Bugfix: About-Dialog: When the RichEdit control had
	  the focus, pressing the ESC key made id disappear.
	  Now ESC (and TAB) merly move the focus to the tab
	  control.

2004-11-19	bseifert
	* Setup optionally installs a link to windirstat in the
	  SendTo-Folder.

2004-11-15	assarbad
	* Russian translation (still a few strings missing) 
	  - thanks to Sergiy Polyetayev

2004-11-14	bseifert/assarbad
	* Date/time and number formatting is now done using
	  GetUserDefaultLangID(), unless the new option
	  "Use this language for formatting" (near the language
	  combo box) is selected.
	  So British users, for example, see their preferred
	  date/time format as configured in the control panel
	  although the selected language for Windirstat is
	  "English - US".
	* Last used folder now pre-selected
	   
2004-11-12  bseifert
	* Added Polish resource dll: wdsr0415. Thanks to Darek.
	* New output folders for Unicode build: udebug, urelease
	* Eliminated CLR_NONE
	* Minor formatting and error handling corrections
	
2004-11-12	assarbad
	* Coloring for compressed and encrypted items spans the